--- a/OctagonPlatform/Views/Terminals/Sections/Pictures.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Pictures.cshtml
@@ -27,6 +27,15 @@
                             <td>
                                 @item.Name
                             </td>
+                            <td>@{
+                                if (item.Archive != null)
+                                {
+                                    string imageBase64 = Convert.ToBase64String(item.Archive);
+                                    string imageSrc = string.Format("data:image/gif;base64,{0}", imageBase64);
+                                    <img src="@imageSrc" width="100" height="100" />
+                                }
+                            }
+                            </td>
                             <td>
                                 <button type="button" class="PicturesDelete btn btn-info btn-microsoft" data-toggle="modal" data-id="@item.Id" data-target="#DeletePictureModal">Delete</button>
                             </td>
