--- a/OctagonPlatform/Views/ReportsSmart/CashBalanceatClose/CashBalanceatClose.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashBalanceatClose/CashBalanceatClose.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Cash Balance At Close";
 
+    string culturefile = "datepicker-es.json";
+
+    string culturejsontext =  System.IO.File.ReadAllText(Server.MapPath(@"~/Octagon/i18n/"+ culturefile)).Replace("\r\n", "").Replace("\n", "").Replace("\r", "").Replace("\t", "");
+
 
 }
 <p></p>
@@ -79,18 +83,22 @@ else
         <strong>Warning!</strong> Not Record Available.
     </div>
 }
+
+
+
 @section Scripts {
 
- 
+
     @Html.Partial("../ScriptsReport")
 
     <script>
 
 
-    $(function () {
-        $("#StartDate").datepicker({
-            dateFormat: "mm/dd/yy"
-        });
+        $(function () {
+
+            var json_culture = @Html.Raw(culturejsontext);          
+
+            $("#StartDate").datepicker(json_culture);
         callankle();
           var tempdataval = '@TempData["List"]';
           if (tempdataval != null && tempdataval != '') {
@@ -112,6 +120,8 @@ else
         });
 
     </script>
+
+
 
 }
 
