--- a/OctagonPlatform/Views/ReportsSmart/DailyTransactionSummary/DailyTransactionSummary.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/DailyTransactionSummary/DailyTransactionSummary.cshtml
@@ -1,6 +1,20 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.DailyTransactionSummaryViewModel
 @{ ViewBag.Title = "Daily Transaction Summary";
 
+    string culturefile = "datepicker-" + ViewBag.Culture + ".json";
+
+    string culturejsontext = System.IO.File.ReadAllText(Server.MapPath(@"~/Octagon/i18n/" + culturefile)).Replace("\r\n", "").Replace("\n", "").Replace("\r", "").Replace("\t", "");
+
+
+    try
+    {
+        var tmpObj = Newtonsoft.Json.Linq.JToken.Parse(culturejsontext);
+    }
+    catch (FormatException fex)
+    {
+        culturejsontext = "{}";
+    }
+
 
 }
 <p></p>
@@ -85,14 +99,12 @@ else
 
     $(function () {
 
+         var json_culture = @Html.Raw(culturejsontext);
 
+            $("#StartDate").datepicker(json_culture);
+            $("#EndDate").datepicker(json_culture);
 
-        $("#EndDate").datepicker({
-            dateFormat: "mm/dd/yy"
-        });
-        $("#StartDate").datepicker({
-            dateFormat: "mm/dd/yy"
-        });
+     
           callankle();
           var tempdataval = '@TempData["List"]';
           if (tempdataval != null && tempdataval != '') {
