--- a/OctagonPlatform/Views/ReportsSmart/MonthlyTransactionSummary/MonthlyTransactionSummary.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/MonthlyTransactionSummary/MonthlyTransactionSummary.cshtml
@@ -4,6 +4,25 @@
     ViewBag.Title = "Monthly Transaction Summary";
 
 
+    string culturefile = "datepicker-" + ViewBag.Culture + ".json";
+
+    var yeacurrent = DateTime.Now.Year;
+    var yearold = yeacurrent - 5;
+    var text = " ,\"changeMonth\": true,\"changeYear\": true, \"yearRange\": \"" + yearold + ":" + yeacurrent + "\" }";
+
+    string culturejsontext = System.IO.File.ReadAllText(Server.MapPath(@"~/Octagon/i18n/" + culturefile)).Replace("\r\n", "").Replace("\n", "").Replace("\r", "").Replace("\t", "").Replace("}", text);
+
+
+
+    try
+    {
+        var tmpObj = Newtonsoft.Json.Linq.JToken.Parse(culturejsontext);
+    }
+    catch (FormatException fex)
+    {
+        culturejsontext = "{}";
+    }
+
 }
 <p></p>
 <div class="panel panel-primary">
@@ -87,22 +106,23 @@ else
 
 
     $(function () {
-
-
-        var yeacurrent = (new Date()).getFullYear();
-        var yearold = yeacurrent - 5;
-        $("#EndDate").datepicker({
-            dateFormat: "mm/dd/yy",
-            changeMonth: true,
-            changeYear: true,
-            yearRange: yearold + ":" + yeacurrent
-        });
-        $("#StartDate").datepicker({
-            dateFormat: "mm/dd/yy",
-            changeMonth: true,
-            changeYear: true,
-            yearRange: yearold + ":" + yeacurrent
-        });
+        var json_culture = @Html.Raw(culturejsontext);
+     
+        $("#StartDate").datepicker(json_culture);
+        $("#EndDate").datepicker(json_culture);
+    
+        //$("#EndDate").datepicker({
+        //    dateFormat: "mm/dd/yy",
+        //    changeMonth: true,
+        //    changeYear: true,
+        //    yearRange: yearold + ":" + yeacurrent
+        //});
+        //$("#StartDate").datepicker({
+        //    dateFormat: "mm/dd/yy",
+        //    changeMonth: true,
+        //    changeYear: true,
+        //    yearRange: yearold + ":" + yeacurrent
+        //});
           callankle();
           var tempdataval = '@TempData["List"]';
           if (tempdataval != null && tempdataval != '') {
