--- a/OctagonPlatform/Views/ReportsSmart/CashLoad/CashLoad.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad/CashLoad.cshtml
@@ -54,7 +54,7 @@
         <div class="panel-heading">
 
             <span class="panel-title">List Cash Load</span>
-            <span class="panel-title" style="float:right">Date: @DateTime.Now</span>
+            <span class="panel-title" style="float:right">Date: @DateTime.Now.ToShortDateString()</span>
 
         </div>
         <div class="panel-body">
