--- a/OctagonPlatform/Views/ReportsSmart/_PartialHead.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/_PartialHead.cshtml
@@ -58,7 +58,7 @@
             </td>
             <td style="width:121.5pt;padding:0in 5.4pt 0in 5.4pt;text-align:right" width="162">
                 <p class="MsoNormal" style="margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal">@DateTime.Now</p>
+  normal">@DateTime.Now.ToShortDateString()</p>
             </td>
         </tr>
     </tbody>
