--- a/OctagonPlatform/Views/Terminals/Sections/BindKey.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/BindKey.cshtml
@@ -55,7 +55,7 @@
 
         <tr>
             <td>Date Bound:</td>
-            <td>@DateTime.Now</td>
+            <td>@DateTime.Now.ToShortDateString()</td>
         </tr>
     </table>
 </div>
